--- a/index.mdx
+++ b/index.mdx
@@ -1,97 +1,139 @@
 ---
-title: "Introduction"
-description: "Welcome to the new home for your documentation"
+title: "Omni Photo Studio"
+description: "AI-Powered Image Generation Platform - Create, edit, and enhance images with cutting-edge artificial intelligence"
 ---
 
-## Setting up
+## Welcome to Omni Photo Studio
 
-Get your documentation site up and running in minutes.
+Omni Photo Studio is a comprehensive AI-powered image generation and editing platform developed by AllCognix AI Technologies. Transform your creative vision into reality with our advanced artificial intelligence tools.
 
 <Card
-  title="Start here"
+  title="Get Started"
   icon="rocket"
   href="/quickstart"
   horizontal
 >
-  Follow our three step quickstart guide.
+  Create your first AI-generated image in minutes with our quickstart guide.
 </Card>
 
-## Make it yours
+## 🎨 AI Image Generation Tools
 
-Design a docs site that looks great and empowers your users.
-
-<Columns cols={2}>
-  <Card
-    title="Edit locally"
-    icon="pen-to-square"
-    href="/development"
-  >
-    Edit your docs locally and preview them in real time.
-  </Card>
-  <Card
-    title="Customize your site"
-    icon="palette"
-    href="/essentials/settings"
-  >
-    Customize the design and colors of your site to match your brand.
-  </Card>
-    <Card
-    title="Set up navigation"
-    icon="map"
-    href="/essentials/navigation"
-  >
-    Organize your docs to help users find what they need and succeed with your product.
-  </Card>
-  <Card
-    title="API documentation"
-    icon="terminal"
-    href="/api-reference/introduction"
-  >
-    Auto-generate API documentation from OpenAPI specifications.
-  </Card>
-</Columns>
-
-## Create beautiful pages
-
-Everything you need to create world-class documentation.
+Unleash your creativity with our powerful suite of AI-powered image generation tools.
 
 <Columns cols={2}>
   <Card
-    title="Write with MDX"
+    title="Text to Image"
     icon="pen-fancy"
-    href="/essentials/markdown"
+    href="/ai-tools/text-to-image"
   >
-    Use MDX to style your docs pages.
+    Generate high-quality images from text descriptions with voice input support.
   </Card>
   <Card
-    title="Code samples"
-    icon="code"
-    href="/essentials/code"
-  >
-    Add sample code to demonstrate how to use your product.
-  </Card>
-  <Card
-    title="Images"
+    title="Image to Image"
     icon="image"
-    href="/essentials/images"
+    href="/ai-tools/image-to-image"
   >
-    Display images and other media.
+    Transform existing images using AI with custom prompts and depth processing.
   </Card>
   <Card
-    title="Reusable snippets"
-    icon="recycle"
-    href="/essentials/reusable-snippets"
+    title="Sketch to Image"
+    icon="pencil"
+    href="/ai-tools/sketch-to-image"
   >
-    Write once and reuse across your docs.
+    Convert hand-drawn sketches into realistic images with AI interpretation.
+  </Card>
+  <Card
+    title="In-Painting"
+    icon="paint-brush"
+    href="/ai-tools/inpainting"
+  >
+    Fill or edit missing parts of images using advanced AI filling algorithms.
+  </Card>
+  <Card
+    title="Image Upscaler"
+    icon="expand"
+    href="/ai-tools/image-upscaler"
+  >
+    Enhance and upscale image quality using AI with multiple scale factors.
   </Card>
 </Columns>
 
-## Need inspiration?
+## 🏠 User Management & Content
+
+Manage your account and organize your creative content efficiently.
+
+<Columns cols={2}>
+  <Card
+    title="Account System"
+    icon="user"
+    href="/user-management/account-system"
+  >
+    Secure registration, login, and profile management with Google OAuth integration.
+  </Card>
+  <Card
+    title="Content Management"
+    icon="folder"
+    href="/content-management/history"
+  >
+    Track generation history, save favorites, and explore community creations.
+  </Card>
+  <Card
+    title="Analytics & Insights"
+    icon="chart-bar"
+    href="/analytics/usage-analytics"
+  >
+    Track usage patterns, credit consumption, and performance metrics.
+  </Card>
+  <Card
+    title="Use Cases"
+    icon="lightbulb"
+    href="/use-cases/creative-professionals"
+  >
+    Discover how different industries leverage Omni Photo Studio.
+  </Card>
+</Columns>
+
+## 🎯 Perfect for Every Industry
+
+From creative professionals to business applications, Omni Photo Studio serves diverse needs.
+
+<Columns cols={2}>
+  <Card
+    title="Creative Professionals"
+    icon="palette"
+    href="/use-cases/creative-professionals"
+  >
+    Graphic designers, photographers, artists, and content creators.
+  </Card>
+  <Card
+    title="Business Applications"
+    icon="briefcase"
+    href="/use-cases/business-applications"
+  >
+    Marketing teams, e-commerce, real estate, and architecture.
+  </Card>
+  <Card
+    title="Educational Use"
+    icon="graduation-cap"
+    href="/use-cases/educational-use"
+  >
+    Students, teachers, and researchers creating visual aids.
+  </Card>
+  <Card
+    title="Personal Use"
+    icon="heart"
+    href="/use-cases/personal-use"
+  >
+    Hobbyists, social media creators, and family photo enhancement.
+  </Card>
+</Columns>
+
+## 🚀 Ready to Create?
 
 <Card
-  title="See complete examples"
+  title="Start Creating Now"
   icon="stars"
-  href="https://mintlify.com/customers"
+  href="https://omniphotostudio.com"
 >
-  Browse our showcase of exceptional documentation sites.
+  Join thousands of creators using Omni Photo Studio to bring their ideas to life.
 </Card>
