--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -1,80 +1,176 @@
 ---
-title: "Quickstart"
-description: "Start building awesome documentation in minutes"
+title: "Quickstart Guide"
+description: "Get started with Omni Photo Studio in minutes"
 ---
 
-## Get started in three steps
+## Welcome to Omni Photo Studio
 
-Get your documentation site running locally and make your first customization.
+Follow this quickstart guide to create your first AI-generated image and explore the platform's powerful features.
 
-### Step 1: Set up your local environment
+## Step 1: Create Your Account
 
-<AccordionGroup>
-  <Accordion icon="copy" title="Clone your docs locally">
-    During the onboarding process, you created a GitHub repository with your docs content if you didn't already have one. You can find a link to this repository in your [dashboard](https://dashboard.mintlify.com).
+<Steps>
+  <Step title="Sign Up">
+    Visit [Omni Photo Studio](https://omniphotostudio.com) and click "Sign Up"
     
-    To clone the repository locally so that you can make and preview changes to your docs, follow the [Cloning a repository](https://docs.github.com/en/repositories/creating-and-managing-repositories/cloning-a-repository) guide in the GitHub docs.
-  </Accordion>
-  <Accordion icon="rectangle-terminal" title="Start the preview server">
-    1. Install the Mintlify CLI: `npm i -g mint`
-    2. Navigate to your docs directory and run: `mint dev`
-    3. Open `http://localhost:3000` to see your docs live!
-    
-    <Tip>Your preview updates automatically as you edit files.</Tip>
-  </Accordion>
-</AccordionGroup>
+    **Registration Options:**
+    - Email and password
+    - Google OAuth (recommended)
+    - Username validation included
+  </Step>
+  
+  <Step title="Verify Your Account">
+    Check your email for verification link
+    - Click the verification link
+    - Complete your profile setup
+  </Step>
+  
+  <Step title="Choose Your Plan">
+    Select a subscription plan or start with free credits
+    - **Free Tier**: Limited generations per day
+    - **Pro Plan**: Unlimited generations + premium features
+    - **Enterprise**: Custom solutions for teams
+  </Step>
+</Steps>
 
-### Step 2: Deploy your changes
+## Step 2: Explore AI Generation Tools
 
-<AccordionGroup>
-  <Accordion icon="github" title="Install our GitHub app">
-    Install the Mintlify GitHub app from your [dashboard](https://dashboard.mintlify.com/settings/organization/github-app).
+<Steps>
+  <Step title="Text to Image">
+    Navigate to the **Text to Image** tool
     
-    Our GitHub app automatically deploys your changes to your docs site, so you don't need to manage deployments yourself.
+    **Try this prompt:**
+    ```
+    A serene mountain landscape at sunset with a crystal clear lake reflecting the peaks
+    ```
+    
+    **Features to explore:**
+    - Voice input (microphone icon)
+    - Style selection (realism, artistic, etc.)
+    - Aspect ratio customization
+    - Quality settings
+  </Step>
+  
+  <Step title="Image to Image">
+    Upload an existing image and transform it
+    
+    **Perfect for:**
+    - Style transfer
+    - Photo enhancement
+    - Creative manipulation
+    - Background replacement
+  </Step>
+  
+  <Step title="Sketch to Image">
+    Upload a hand-drawn sketch
+    
+    **Great for:**
+    - Architectural visualization
+    - Fashion design concepts
+    - Product mockups
+    - Art creation from rough sketches
+  </Step>
+</Steps>
+
+## Step 3: Manage Your Content
+
+<Steps>
+  <Step title="View Generation History">
+    Access your **History** tab to see all generated images
+    - Re-download previous creations
+    - View generation details
+    - Search and filter results
+  </Step>
+  
+  <Step title="Save Favorite Images">
+    Use the **Save** button on any generated image
+    - Organize by categories
+    - Quick access to favorites
+    - Export capabilities
+  </Step>
+  
+  <Step title="Explore Community">
+    Visit the **Explore** section
+    - Discover trending content
+    - Like and interact with others
+    - Copy prompts from community images
+    - Download community creations
+  </Step>
+</Steps>
+
+## Step 4: Advanced Features
+
+<Steps>
+  <Step title="In-Painting Tool">
+    Upload an image and use the masking tool
+    - Select areas to edit or remove
+    - Use voice input for prompts
+    - Fill missing parts intelligently
+  </Step>
+  
+  <Step title="Image Upscaler">
+    Enhance low-resolution images
+    - Choose scale factor (2x, 3x, 4x)
+    - Preserve original quality
+    - Batch processing available
+  </Step>
+  
+  <Step title="Analytics Dashboard">
+    Monitor your usage
+    - Track generation statistics
+    - View credit consumption
+    - Export usage reports
+  </Step>
+</Steps>
+
+## Pro Tips for Better Results
+
+<Accordion title="Writing Effective Prompts">
+- Be specific and descriptive
+- Include style keywords (photorealistic, artistic, minimalist)
+- Mention lighting conditions (soft lighting, dramatic shadows)
+- Specify composition (close-up, wide shot, aerial view)
+- Add quality modifiers (high resolution, detailed, professional)
 </Accordion>
-<Accordion icon="palette" title="Update your site name and colors">
-    For a first change, let's update the name and colors of your docs site.
 
-    1. Open `docs.json` in your editor.
-    2. Change the `"name"` field to your project name.
-    3. Update the `"colors"` to match your brand.
-    4. Save and see your changes instantly at `http://localhost:3000`.
-
-    <Tip>Try changing the primary color to see an immediate difference!</Tip>
-  </Accordion>
-</AccordionGroup>
-
-### Step 3: Go live
-
-<Accordion icon="rocket" title="Publish your docs">
-  1. Commit and push your changes.
-  2. Your docs will update and be live in moments!
+<Accordion title="Optimizing Image Quality">
+- Use high-resolution source images for Image to Image
+- Ensure good contrast in sketches for Sketch to Image
+- Select appropriate aspect ratios for your use case
+- Experiment with different AI models (V1 vs V2)
 </Accordion>
 
-## Next steps
+<Accordion title="Managing Credits Efficiently">
+- Preview generations before finalizing
+- Use lower quality settings for experimentation
+- Save successful prompts for reuse
+- Monitor usage in analytics dashboard
+</Accordion>
 
-Now that you have your docs running, explore these key features:
+## Next Steps
 
 <CardGroup cols={2}>
+  <Card
+    title="Explore Use Cases"
+    icon="lightbulb"
+    href="/use-cases/creative-professionals"
+  >
+    Discover how different industries use Omni Photo Studio
+  </Card>
 
-<Card title="Write Content" icon="pen-to-square" href="/essentials/markdown">
-  Learn MDX syntax and start writing your documentation.
-</Card>
+  <Card
+    title="API Documentation"
+    icon="code"
+    href="/api-reference/introduction"
+  >
+    Integrate Omni Photo Studio into your applications
+  </Card>
 
-<Card title="Customize style" icon="palette" href="/essentials/settings">
-  Make your docs match your brand perfectly.
-</Card>
-
-<Card title="Add code examples" icon="square-code" href="/essentials/code">
-  Include syntax-highlighted code blocks.
-</Card>
-
-<Card title="API documentation" icon="code" href="/api-reference/introduction">
-  Auto-generate API docs from OpenAPI specs.
-</Card>
-
+  <Card
+    title="Get Support"
+    icon="headset"
+    href="mailto:support@allcognix.com"
+  >
+    Contact our support team for assistance
+  </Card>
 </CardGroup>
-
-<Note>
-  **Need help?** See our [full documentation](https://mintlify.com/docs) or join our [community](https://mintlify.com/community).
-</Note>
