--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -3,7 +3,7 @@ title: "Quickstart Guide"
 description: "Get started with Omni Photo Studio in minutes"
 ---
 
-## Welcome to Omni Photo Studio
+## Welcome to Omni Photo Studio New
 
 Follow this quickstart guide to create your first AI-generated image and explore the platform's powerful features.
 
