--- a/index.mdx
+++ b/index.mdx
@@ -3,7 +3,7 @@ title: "Omni Photo Studio"
 description: "AI-Powered Image Generation Platform - Create, edit, and enhance images with cutting-edge artificial intelligence"
 ---
 
-## Welcome to Omni Photo Studio
+## Welcome to Omni Photo Studio New
 
 Omni Photo Studio is a comprehensive AI-powered image generation and editing platform developed by AllCognix AI Technologies. Transform your creative vision into reality with our advanced artificial intelligence tools.
 
