--- a/api-reference/introduction.mdx
+++ b/api-reference/introduction.mdx
@@ -9,7 +9,7 @@ Welcome to the Omni Photo Studio API. Our RESTful API allows you to integrate AI
 
 ## Authentication
 
-The Omni Photo Studio API uses API keys for authentication. You can manage your API keys in your [Dashboard](https://omniphotostudio.com/dashboard/api-keys).
+The Omni Photo Studio API uses API keys for authentication. You can manage your API keys in your [Dashboard](https://photos.allcognix.com/dashboard/api-keys).
 
 Include your API key in requests by adding it as an `Authorization` header:
 
