--- a/index.mdx
+++ b/index.mdx
@@ -133,7 +133,7 @@ From creative professionals to business applications, Omni Photo Studio serves d
 <Card
   title="Start Creating Now"
   icon="stars"
-  href="https://omniphotostudio.com"
+  href="https://photos.allcognix.com"
 >
   Join thousands of creators using Omni Photo Studio to bring their ideas to life.
 </Card>
