--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -11,7 +11,7 @@ Follow this quickstart guide to create your first AI-generated image and explore
 
 <Steps>
   <Step title="Sign Up">
-    Visit [Omni Photo Studio](https://omniphotostudio.com) and click "Sign Up"
+    Visit [Omni Photo Studio](https://photos.allcognix.com) and click "Sign Up"
     
     **Registration Options:**
     - Email and password
