--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -169,7 +169,7 @@ Follow this quickstart guide to create your first AI-generated image and explore
   <Card
     title="Get Support"
     icon="headset"
-    href="mailto:support@allcognix.com"
+    href="mailto:contact@allcognix.com"
   >
     Contact our support team for assistance
   </Card>
